--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   color: var(--black);
   background-color: #f8f9fa;
   line-height: 1.7;
+   padding-top: 70px;
 }
 
 a {
@@ -966,17 +967,23 @@ section li {
 
   /* COLLAPSE CARD */
   .navbar-collapse {
+    position: absolute;
+    top: 100%;             
+    left: 0;
+    right: 0;
+
     background: #ffffff;
-    margin-top: 12px;
-    border-radius: 16px;
+    margin-top: 0;
+    border-radius: 0 0 16px 16px;
     padding: 16px;
+
     box-shadow: 0 15px 40px rgba(0,0,0,0.15);
   }
 
   /* RESET NAV */
   .navbar-nav {
     margin: 0;
-    padding: 0;     /* 🔥 remove double padding */
+    padding: 0;     
     width: 100%;
   }
 
@@ -1003,6 +1010,9 @@ section li {
 
   .navbar {
     padding: 10px 0;
+     position: fixed;
+    width: 100%;
+    z-index: 9999;
   }
 }
 
@@ -1142,6 +1152,10 @@ section li {
 
   .about-modern .btn {
     width: 100%;
+  }
+
+  .btn-check-route{
+    margin-top: 40px;
   }
 
 
